# tpmgr

./: .gitignore  Cargo.toml  LICENSE  README.md  README_zh.md  install-remote.ps1
.github/: copilot-instructions.md
.github/workflows/: release.yml
docs/: developer.md
examples/: README.md  README_zh.md  test_examples.ps1  test_examples.sh
examples/basic-project/: main.tex
examples/complex-compile-chain/: main.tex  references.bib
examples/multi-package-test/: main.tex
examples/presentation/: main.tex
src/: commands.rs  config.rs  error.rs  main.rs  mirror.rs  package.rs  resolver.rs  tex_parser.rs  texlive.rs
