[package]
name = "tpmgr"
version = "0.1.0"
edition = "2021"
description = "A lightweight command-line tool for LaTeX package management"
authors = ["jiaojiaodubai <jiaojiaodubai23@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/jiaojiaodubai/tpmgr"
keywords = ["latex", "package-manager", "tex", "cli"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
anyhow = "1.0"
thiserror = "1.0"
glob = "0.3"
dirs = "5.0"
toml = "0.8"
sha2 = "0.10"
tar = "0.4"
flate2 = "1.0"
regex = "1.0"
tempfile = "3.0"
